@@ -12,6 +12,8 @@
 [+] $plxShow->lastArtList() optimisations #433 (bazooka07)
 [+] $plxShow->urlPostsRssFeed() optimisations #435 (bazooka07)
 [+] $plxMotor->getTags() optimisations #437 (bazooka07)
+[+] $plxShow->admin() display a link to the PluXml backoffice #443 (bazooka07)
+[+] New const PLX_ADMIN_PATH in config.php used to define the PluXml backoffice path #443 (bazooka07)
 FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
 FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
 FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
